--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ChatApp</string>
+    <string name="app_name">Me Chat</string>
     <string name="title_activity_main">MainActivity</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -21,4 +21,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="select_user">Select User</string>
     <string name="type_your_message">Type your message...</string>
+    <string name="online">Online</string>
 </resources>
